--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
   <p class="prompt">What kind of photos are you looking for?</p>
+  <form>
     <input type="text" class="pure-input-rounded">
     <button type="submit" class="pure-button">Search</button>
-  <form>
-    
   </form>
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
