rendered first set of 10 photos onto page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <input type="text" class="pure-input-rounded">
     <button type="submit" class="pure-button">Search</button>
   </form>
+  <br>
+  <div id="images"></div>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="main.js"></script>
 </body>
