added overlay image show and hide functions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Forbes Photo App</title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <p class="prompt">What kind of photos are you looking for?</p>
@@ -14,6 +14,11 @@
   </form>
   <br>
   <div id="images"></div>
+  <div id="myNav" class="overlay">
+    <div class="overlay-content">
+      <img id="overlay-image" src="">
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="main.js"></script>
 </body>
