added next button pagination functionality

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <button type="submit" class="pure-button">Search</button>
   </form>
   <br>
-  <div id="images"></div>
   <div id="myNav" class="overlay">
     <div class="overlay-content">
       <img id="overlay-image" src="">
     </div>
   </div>
+  <div id="images"></div>
+  <div id="toggle-buttons"></div>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="main.js"></script>
 </body>
